@@ -479,15 +479,16 @@ class PlayService(xbmc.Player, BasePlayService):
     def catchupTelia(self, channelInfo, utc, lutc, cmore=False):
         deb('catchupTelia')
 
+        dashjs = channelInfo.dashjs
+        beartoken = channelInfo.beartoken
+        tv_client_boot_id = channelInfo.tv_client_boot_id
+
         try:
             if cmore:
                 cc = ['dk', 'no', 'se']
 
                 base = ['https://cmore.dk', 'https://cmore.no', 'https://www.cmore.se']
-                country            = int(ADDON.getSetting('cmore_locale'))
-                dashjs             = ADDON.getSetting('cmore_devush')
-                beartoken          = ADDON.getSetting('cmore_beartoken')
-                tv_client_boot_id  = ADDON.getSetting('cmore_tv_client_boot_id')
+                country = int(ADDON.getSetting('cmore_locale'))
 
                 whiteLabelBrand = 'CMORE'
                 refr = 'cmore'
@@ -496,10 +497,7 @@ class PlayService(xbmc.Player, BasePlayService):
                 cc = ['dk', 'se']
 
                 base = ['https://teliatv.dk', 'https://www.teliaplay.se']
-                country            = int(ADDON.getSetting('teliaplay_locale'))
-                dashjs             = ADDON.getSetting('teliaplay_devush')
-                beartoken          = ADDON.getSetting('teliaplay_beartoken')
-                tv_client_boot_id  = ADDON.getSetting('teliaplay_tv_client_boot_id')
+                country = int(ADDON.getSetting('teliaplay_locale'))
 
                 whiteLabelBrand = 'TELIA'
                 refr = 'telia'
@@ -532,7 +530,7 @@ class PlayService(xbmc.Player, BasePlayService):
                 'content-type': 'application/json',
                 'dnt': '1',
                 'origin': base[country],
-                'referer': base[country]+'/',
+                'referer': base[country] + '/',
                 'tv-client-boot-id': tv_client_boot_id,
                 'tv-client-browser': 'Microsoft Edge',
                 'tv-client-browser-version': '101.0.1210.39',
@@ -579,9 +577,9 @@ class PlayService(xbmc.Player, BasePlayService):
                     title = item['media']['title']
 
                     if PY3:
-                        p = re.compile('\WwatchMode\W:\s*\W(.*?)\W,', re.M)
+                        p = re.compile(r'\WwatchMode\W:\s*\W(.*?)\W,', re.M)
                     else:
-                        p = re.compile('\WwatchMode\W:\s*\W(.*?)\W},', re.M)
+                        p = re.compile(r'\WwatchMode\W:\s*\W(.*?)\W},', re.M)
 
                     watch_modes = p.findall(json.dumps(item['media']['playback']['play']))
 
@@ -601,7 +599,7 @@ class PlayService(xbmc.Player, BasePlayService):
                 'Connection': 'keep-alive',
                 'tv-client-boot-id': tv_client_boot_id,
                 'DNT': '1',
-                'Authorization': 'Bearer '+ beartoken,
+                'Authorization': 'Bearer ' + beartoken,
                 'tv-client-tz': 'Europe/Stockholm',
                 'X-Country': cc[country],
                 'User-Agent': UA,
@@ -618,22 +616,22 @@ class PlayService(xbmc.Player, BasePlayService):
 
             data = {
                 "sessionId": six.text_type(uuid.uuid4()),
-                "whiteLabelBrand":whiteLabelBrand,
+                "whiteLabelBrand": whiteLabelBrand,
                 "watchMode": catchupType,
-                "accessControl":"SUBSCRIPTION",
+                "accessControl": "SUBSCRIPTION",
                 "device": {
                     "deviceId": tv_client_boot_id,
-                    "category":"desktop_windows",
-                    "packagings":["DASH_MP4_CTR"],
-                    "drmType":"WIDEVINE",
-                    "capabilities":[],
+                    "category": "desktop_windows",
+                    "packagings": ["DASH_MP4_CTR"],
+                    "drmType": "WIDEVINE",
+                    "capabilities": [],
                     "screen": {
-                        "height":1080,
-                        "width":1920
+                        "height": 1080,
+                        "width": 1920
                         },
-                    
-                    "os":"Windows",
-                    "model":"windows_desktop"
+
+                    "os": "Windows",
+                    "model": "windows_desktop"
                     },
 
                     "preferences": {
@@ -720,7 +718,7 @@ class PlayService(xbmc.Player, BasePlayService):
         inputstream = self.CheckInputstreamInstalledAndEnabled()
         ffmpegdirect = self.CheckFFmpegDirectInstalledAndEnabled()
 
-        pl = re.compile('playlist_\d')
+        pl = re.compile(r'playlist_\d')
 
         if ADDON.getSetting('start_video_minimalized') == 'true':
             startWindowed = True
@@ -823,7 +821,6 @@ class PlayService(xbmc.Player, BasePlayService):
                             else:
                                 ssl._create_default_https_context = _create_unverified_https_context
                             certificate_data = 'MIIF6TCCBNGgAwIBAgIQCYbp7RbdfLjlakzltFsbRTANBgkqhkiG9w0BAQsFADBcMQswCQYDVQQGEwJVUzEVMBMGA1UEChMMRGlnaUNlcnQgSW5jMRkwFwYDVQQLExB3d3cuZGlnaWNlcnQuY29tMRswGQYDVQQDExJUaGF3dGUgUlNBIENBIDIwMTgwHhcNMjAxMTAzMDAwMDAwWhcNMjExMjA0MjM1OTU5WjBWMQswCQYDVQQGEwJQTDERMA8GA1UEBxMIV2Fyc3phd2ExHDAaBgNVBAoTE0N5ZnJvd3kgUG9sc2F0IFMuQS4xFjAUBgNVBAMMDSoucmVkZWZpbmUucGwwggEiMA0GCSqGSIb3DQEBAQUAA4IBDwAwggEKAoIBAQC5dmzwoPSg3vOOSuRUHGVAKTvXQZEMwGCEhL6uojxn5BEKDTs00zdoOEkPdD8WFFEvYEKwZ/071XYPGuEMaiFs5zV0DYp7MsAi/nKZy0vTDn8FwdK2bPay2HwfjOAXhf+qjtJfWUI2o43kMLHa/TB9Nb61MSGbGGR1t3UxvJbLkJNdIFLdbU+oKof68PB7EZ9QDTCqklWhXokfxXbEmFGEicL1V8dQVmq2VzX/s7ICAg3WnFJ5Y/iJJV5em0JYNCRYYdf/Vohvp8C1yY0TP6XsfjgZZysdioFlHrDE5ilDIEu54jiCOCIAvnpTAR7wol66ok8pldoJiXkLn8OSFyPlAgMBAAGjggKrMIICpzAfBgNVHSMEGDAWgBSjyF5lVOUweMEF6gcKalnMuf7eWjAdBgNVHQ4EFgQUYG0/Qi/unb45V9e9z81Nn/opejcwJQYDVR0RBB4wHIINKi5yZWRlZmluZS5wbIILcmVkZWZpbmUucGwwDgYDVR0PAQH/BAQDAgWgMB0GA1UdJQQWMBQGCCsGAQUFBwMBBggrBgEFBQcDAjA6BgNVHR8EMzAxMC+gLaArhilodHRwOi8vY2RwLnRoYXd0ZS5jb20vVGhhd3RlUlNBQ0EyMDE4LmNybDBMBgNVHSAERTBDMDcGCWCGSAGG/WwBATAqMCgGCCsGAQUFBwIBFhxodHRwczovL3d3dy5kaWdpY2VydC5jb20vQ1BTMAgGBmeBDAECAjBvBggrBgEFBQcBAQRjMGEwJAYIKwYBBQUHMAGGGGh0dHA6Ly9zdGF0dXMudGhhd3RlLmNvbTA5BggrBgEFBQcwAoYtaHR0cDovL2NhY2VydHMudGhhd3RlLmNvbS9UaGF3dGVSU0FDQTIwMTguY3J0MAwGA1UdEwEB/wQCMAAwggEEBgorBgEEAdZ5AgQCBIH1BIHyAPAAdgD2XJQv0XcwIhRUGAgwlFaO400TGTO/3wwvIAvMTvFk4wAAAXWO0xv2AAAEAwBHMEUCIQDN5p0QqITEtjMexdGmGjHR/8PxCN4OFiJDMFy7j74MgwIgXtmZfGnxI/GUKwwd50IVHuS6hmnua+fsLIpeOghE9XoAdgBc3EOS/uarRUSxXprUVuYQN/vV+kfcoXOUsl7m9scOygAAAXWO0xw9AAAEAwBHMEUCIQDNcrHQBd/WbQ3/sUvd0D37D5oZDIRf/mx3V5rAm6PvzwIgRJx+5MiIu/Qa4NN9vk51oBL171+iFRTyglwYR/NT5oQwDQYJKoZIhvcNAQELBQADggEBAHEgY9ToJCJkHtbRghYW7r3wvER8uGKQa/on8flTaIT53yUqCTGZ1VrjbpseHYqgpCwGigqe/aHBqwdJfjtXnEpFa5x1XnK2WgwK3ea7yltQxta3O3v8CJ7mU/jrWrDMYJuv+3Vz79kwOVmQN0kvlK56SnNR5PrHjO0URInGKbQenB2V0I5t/IjLsLCfKKao+VXoWCCzTY+GagcqNAt9DIiG//yXKs00vnj8I2DP74J9Up6eBdPgS7Naqi8uetaoharma9/59a/tb5PugixAmDGUzUf55NPl9otRsvVuCyT3yaCNtI2M09l6Wfdwryga1Pko+KT3UlDPmbrFUtwlPAU='
-                            
 
                             is_helper = inputstreamhelper.Helper(PROTOCOL, drm=DRM)
                             if is_helper.check_inputstream():
@@ -867,8 +864,8 @@ class PlayService(xbmc.Player, BasePlayService):
 
                         HEADERSz = {
                             'User-Agent': UApl,
-                        }
-                        
+                            }
+
                         import inputstreamhelper
                         is_helper = inputstreamhelper.Helper(PROTOCOL, drm=DRM)
                         if is_helper.check_inputstream():
